@@ -1,3 +1,8 @@
+Wed Sep  2 16:49:53 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* math.c (math_gamma): get rid of direct comparison between too
+	  big double and integer, with gcc on x86_64.  [ruby-core:25257]
+
 Wed Sep  2 13:47:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* math.c (domain_check): simplified.
